[package]
authors = ["887 <2300887@gmail.com>"]
name = "crab-doh-proxy"
version = "0.1.0"
[dependencies]
clap = "2.31.2"
dns-parser = "0.7.1"
env_logger = "0.5.10"
log = "0.4.1"
native-tls = "0.1.5"
rayon = "1.0.1"
serde = "1.0.53"
serde_derive = "1.0.54"
serde_json = "1.0.17"
simple_logger = "0.5.0"
tokio = "0.1.6"
tokio-tls = "0.1.4"
